Fix line wrap caused by optimizeLegibility

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,6 +4,7 @@ $dark: #333333;
 $gray: #666666;
 $family-sans-serif: var(--font);
 $render-mode: auto;
+$body-rendering: auto;
 
 :root {
   // global theme variables
